--- a/src/sass/_area-hot.scss
+++ b/src/sass/_area-hot.scss
@@ -1,11 +1,88 @@
 .area-hot {
     width: 100%;
-    height: 727px;
+    height: 474px;
 }
 
 .area-hot .temp-wrap {
     margin: 0 auto;
     width: 1190px;
-    height: 727px;
-    background-color: cyan
+    height: 474px;
+}
+
+.area-hot .hotul {
+    overflow: hidden;
+    width: 1190px;
+    height: 352px;
+}
+
+.area-hot li {
+    float: left;
+    overflow: hidden;
+    width: 330px;
+    height: 120px;
+    padding: 28px;
+    margin-right: 16px;
+    background-color: #FFF;
+}
+
+.area-hot .hotul li:nth-of-type(3),
+.area-hot .hotul li:nth-of-type(6) {
+    margin-right: 0
+}
+
+.area-hot li a {
+    text-decoration: none;
+    color: #666;
+}
+
+.area-hot li img {
+    width: 130px;
+    height: 130px;
+    float: left;
+}
+
+.area-hot li .info {
+    width: 184px;
+    margin-left: 15px;
+    line-height: 20px;
+    color: #666;
+    float: left;
+}
+
+.area-hot li .info .text {
+    height: 81px;
+    overflow: hidden;
+}
+
+.area-hot li .from {
+    color: #999;
+    font-size: 12px;
+}
+
+.area-hot li .from span {
+    display: inline-block;
+    width: 14px;
+    height: 12px;
+    margin-right: 5px;
+    background: url(../img/base.png) no-repeat -174px 0;
+    vertical-align: -1px;
+}
+
+.area-hot li .from font {
+    padding-left: 5px;
+    font-style: normal;
+}
+
+.area-hot li .name {
+    font-size: 14px;
+    height: 20px;
+    overflow: hidden;
+}
+
+.area-hot li .name span {
+    display: inline;
+    color: #ea0406;
+    padding-left: 6px;
+    margin-left: 6px;
+    border-left: 1px solid #DDD;
 }
