--- a/src/sass/_ad.scss
+++ b/src/sass/_ad.scss
@@ -23,7 +23,7 @@
 
 .ad .wrap {
     position: relative;
-    padding-top: 146px;
+    // padding-top: 146px;
     width: 1190px;
-    margin: 0 auto;
+    margin: 146px auto 0;
 }
